--- a/hitRandom.css
+++ b/hitRandom.css
@@ -123,10 +123,10 @@ p{
     color: rgb(0, 0, 0);
     cursor: pointer;
 }
-@media screen and (max-width : 450px) {
+@media screen and (max-width : 500px) {
     main{
         width: 100%;
-        height: 100%;
+        height: 650px;
         /* background-color: #b90000; */
         background-color: rgb(0, 175, 88);
     }
@@ -134,7 +134,7 @@ p{
         height: 50px;
     }
     main .main{
-        height: 89%;
+        height: 92%;
     }
     .top p{
         width: 60px;
