--- a/hitRandom.css
+++ b/hitRandom.css
@@ -157,7 +157,7 @@ p{
 }
 @media screen and (min-width : 800px) {
     main{
-        height: 89.5%;
+        height: 90vh;
         width: 90%;
         background-color: rgb(0, 175, 88);
     }
